<resources>
    <string name="app_name">OPG WebShop</string>
    <string name="PAYPAL_CLIENT_ID" translatable="false">AYegTkx5X8CQCpAb2AhvVCHLFEADS0ixPwVGrcIV7QSeorpF9tC2M5jpLjWhkVpqQmtF0dQnSoB0TYPC</string>
    <string name="lbl_forgot_password">Forgot password</string>
    <string name="forgot_password_msg">We need your registered email to sent reset email</string>
    <string name="title_activity_menu" translatable="false">Menu</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="order_number">Order number:</string>
    <string name="order_status">Order status:</string>
    <string name="total_items">Total items:</string>
    <string name="total_price">Total price:</string>
    <string name="product_txt">Products</string>
    <string name="user_info">User info</string>
    <string name="user_name">Name:</string>
    <string name="user_phone">Phone:</string>
    <string name="delivery_hedding">Delivery: </string>
    <string name="state_hedding">State: </string>
    <string name="City_hedding">City: </string>
    <string name="Postal_code_headding">Postal code:</string>
    <string name="street_heading">Street and house number:</string>
    <string name="payment_heading">Payment method</string>
    <string name="Comment_heading">Comment</string>
    <string name="total_heading">Total: </string>
    <string name="status_heading">STATUS:</string>
    <string name="about_us">About us</string>
    <string name="basic_info">Basic info</string>
    <string name="txt_activites">Activities</string>
    <string name="txt_goals">Goals</string>
    <string name="payment_options">Payment options</string>
    <string name="actionBarProfil">Profile</string>
    <string name="actionBarAddress">Address</string>
    <string name="actionBarDiscount">Discount</string>
    <string name="actionBarCart">Cart</string>
    <string name="actionBarCheckout">Checkout</string>
    <string name="actionBarOrders">Orders</string>
    <string name="actionBarOrderDetail">Orders detail</string>
    <string name="actionBarProducts">Products</string>
    <string name="actionBarAboutUs">About us</string>
    <string name="ship_home_address">Ship to home address</string>
    <string name="ship_to_address">Ship to this address</string>
    <string name="pick_in_store">Pickup in store</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="Address_big">ADDRESS</string>
    <string name="delivery_opt_big">DELIVERY OPTIONS</string>
    <string name="payment_met_big">PAYMENT METHOD</string>
    <string name="Coment_big">COMMENT</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="proceed_checkout">PROCEED TO CHECKOUT</string>
    <string name="mesurment_unit">Unit:</string>
    <string name="select_options">Select delivery and payment options</string>
    <string name="order_placed">Order placed</string>
    <string name="state_hint">State</string>
    <string name="city_hint">City</string>
    <string name="Postal_code_hint">Postal code</string>
    <string name="Street_houde_hint">Street and house number</string>
    <string name="update">UPDATE</string>
    <string name="name_hint">Name</string>
    <string name="surname_hint">Surname</string>
    <string name="phone_hint">Phone</string>
    <string name="price_per_unit">Price per unit:</string>
    <string name="quantity">Quantity:</string>
    <string name="login">LOGIN</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="email_hit">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="reset_btn">Reset</string>
    <string name="auth_failed">Autentification failed</string>
    <string name="discount">Discount</string>
    <string name="my_orders">My Orders</string>
    <string name="news">News</string>
    <string name="sign_out">Sign out</string>
    <string name="price">Price:</string>
    <string name="txt_discount">Discount:</string>
    <string name="product_description">Description:</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="register_account">Register</string>
    <string name="order_sent">SENT</string>
    <string name="order_recieved">RECIEVED</string>
    <string name="order_shipped">SHIPPED</string>
    <string name="order_sent_small">Sent</string>
    <string name="order_recieved_small">Recieved</string>
    <string name="order_shipped_small">Shipped</string>
    <string name="update_address">Address updated</string>
    <string name="signOut">You are successfully sign out</string>
    <string name="cancel_order">Order canceled</string>
    <string name="invalid_payment">Invalid payment</string>
    <string name="new_address_heading">New address</string>
    <string name="new_address_message">Please enter new address</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="fill_all_info">Fill all informations</string>
    <string name="added_to_cart">Added to Cart</string>
    <string name="profile_updated">Profile updated</string>
    <string name="password_short">Password to short</string>
    <string name="enter_email">Enter email address!</string>
    <string name="enter_password">Enter password!</string>
    <string name="aut_failed">Authentication failed!</string>
    <string name="send_reset">We have sent you instructions to reset your password!</string>
    <string name="failed_send_reset">Failed to send reset email!</string>
    <string name="aditional_cost">Shipping to the address has an additional cost of 30 HRK for a value below 500 HRK</string>
    <string name="comment_add">Comment placed</string>
    <string name="comment">Comment</string>
    <string name="no_comment">No comment yet</string>
    <string name="wrong_password_change">Something went wrong. Please try again later</string>
    <string name="password_changed">Password Successfully Modified</string>
    <string name="change_pass">Change Password</string>
    <string name="deleteAcc">Delete account</string>
    <string name="old_passwoed">Old password</string>
    <string name="new_password">New password</string>
    <string name="delete_user">Deleting user</string>
    <string name="delete_user_message">Are you sure you want to delete a user?</string>
    <string name="user_deleted">User deleted</string>
    <string name="error">Something went wrong. Please try again later</string>
    <string name="enter_new_password">Please enter new password</string>
    <string name="enter_comment">Please enter new comment</string>
    <string name="unavailabe">Product temporarily unavailable</string>
    <string name="failed">Failed</string>
    <string name="new_order">You have new order</string>
    <string name="wait">Please wait...</string>
    <string name="singout">You are singout</string>
    <string name="deliver_to_address">Deliver to address</string>
    <string name="pick_up_in_store">Pickup in store</string>
    <string name="enter_home_address">Please enter your home address</string>
    <string name="deliver_to_addr">Deliver to address</string>
    <string name="pending">Pending</string>
    <string name="registrated_email">Enter your registered email</string>
    <string name="success">Seccesful</string>
    <string name="price_per_unt">Price per unit:</string>
    <string name="name">Name</string>
    <string name="enter_user_info">Please enter your personal info before ordering</string>
    <string name="verified_email">Please verify your email address</string>
    <string name="email_verification_send">Verification email sent</string>
    <string name="error_verification_email">Error sending verification email</string>
    <string name="no_orders">No orders yet</string>
    <string name="no_suggestions">No more suggestions</string>
    <string name="order_canceled_small">Canceled</string>
</resources>
