<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="16dp"
android:background="@drawable/background">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCategory"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="-8dp"
            android:hint="@string/name_hint"
            android:inputType="text"
            android:textSize="32sp"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/Edit_txt_focus"
            app:met_singleLineEllipsis="false"
            app:met_textColor="@android:color/white"
            app:met_textColorHint="@android:color/white" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/txt_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="-15dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="-8dp"
            android:hint="@string/surname_hint"
            android:inputType="text"
            android:textSize="32sp"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/Edit_txt_focus"
            app:met_singleLineEllipsis="false"
            app:met_textColor="@android:color/white"
            app:met_textColorHint="@android:color/white" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/txt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="-15dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="-8dp"
            android:hint="@string/phone_hint"
            android:inputType="number"
            android:textSize="32sp"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/Edit_txt_focus"
            app:met_singleLineEllipsis="true"
            app:met_textColor="@android:color/white"
            app:met_textColorHint="@android:color/white" />

        <info.hoang8f.widget.FButton
            android:id="@+id/Btn_Update_Profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/update"
            android:textColor="@android:color/white"
            app:cornerRadius="4dp"
            app:fButtonColor="@color/LoginButton"
            app:shadowColor="@android:color/black"
            app:shadowEnabled="true"
            app:shadowHeight="5dp" />

        <info.hoang8f.widget.FButton
            android:id="@+id/btn_changePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginStart="8dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="2dp"
            android:text="@string/change_pass"
            android:textColor="@android:color/white"
            app:cornerRadius="4dp"
            app:fButtonColor="#FF6600"
            app:shadowColor="@android:color/black"
            app:shadowEnabled="true"
            app:shadowHeight="5dp" />

        <info.hoang8f.widget.FButton
            android:id="@+id/btn_deleteAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/deleteAcc"
            android:textColor="@android:color/white"
            app:cornerRadius="4dp"
            app:fButtonColor="@android:color/holo_red_dark"
            app:shadowColor="@android:color/black"
            app:shadowEnabled="true"
            app:shadowHeight="5dp" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>

</RelativeLayout>