<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/txt_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/state_hint"
                    android:inputType="text|textMultiLine"
                    android:maxLength="100"
                    android:textSize="22sp"
                    app:met_baseColor="@color/colorPrimary"
                    app:met_floatingLabel="highlight"
                    app:met_maxCharacters="100"
                    app:met_primaryColor="@color/Edit_txt_focus"
                    app:met_singleLineEllipsis="false"
                    app:met_textColor="@android:color/black"
                    app:met_textColorHint="@color/colorAccent" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/txt_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city_hint"
                    android:inputType="text|textMultiLine"
                    android:maxLength="100"
                    android:textSize="22sp"
                    app:met_baseColor="@color/colorPrimary"
                    app:met_floatingLabel="highlight"
                    app:met_maxCharacters="100"
                    app:met_primaryColor="@color/Edit_txt_focus"
                    app:met_singleLineEllipsis="false"
                    app:met_textColor="@android:color/black"
                    app:met_textColorHint="@color/colorAccent" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/txt_postal_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Postal_code_hint"
                    android:inputType="text|textMultiLine"
                    android:maxLength="100"
                    android:textSize="22sp"
                    app:met_baseColor="@color/colorPrimary"
                    app:met_floatingLabel="highlight"
                    app:met_maxCharacters="100"
                    app:met_primaryColor="@color/Edit_txt_focus"
                    app:met_singleLineEllipsis="false"
                    app:met_textColor="@android:color/black"
                    app:met_textColorHint="@color/colorAccent" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/txt_street_hose_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Street_houde_hint"
                    android:inputType="text|textMultiLine"
                    android:maxLength="100"
                    android:textSize="22sp"
                    app:met_baseColor="@color/colorPrimary"
                    app:met_floatingLabel="highlight"
                    app:met_maxCharacters="100"
                    app:met_primaryColor="@color/Edit_txt_focus"
                    app:met_singleLineEllipsis="false"
                    app:met_textColor="@android:color/black"
                    app:met_textColorHint="@color/colorAccent" />


            </LinearLayout>



</RelativeLayout>